[build-system]
requires = [ "setuptools>=77", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project]
name = "arches-search"
version = "0.1.0a3"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [ "arches<8.2.0,>=8.1.0a0", "arches-controlled-lists>=1.1.0a0", "arches-modular-reports>=1.0.0b6",]
dynamic = []

[tool.setuptools]
packages = [ "arches_search",]

[dependency-groups]
dev = [ "black==24.4.2", "coverage", "django-silk==5.1.0", "livereload", "pre-commit==3.8.0", "sst",]
